--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url('../public/images/background.jpg'); filter:blur(.5px);
-  
-}
+  }
 
 .row {
   padding: 40px;
@@ -31,6 +30,8 @@ code {
   font-family:'Cormorant Garamond', serif;
   color: black;
   font-weight: bold;
+  margin: 0% 20%;
+  
 }
 .navbar .navbar-nav .nav-item::after {
   position: absolute;
@@ -46,3 +47,15 @@ code {
   width: 100%;
 } 
 
+#images{
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+} 
+
+#pictures:hover .image{
+  opacity: 0.3;
+}
