--- a/src/components/ProjectList/projectList.css
+++ b/src/components/ProjectList/projectList.css
@@ -1,40 +1,15 @@
-/* body {
-    margin: 0;
-  }
-  
-  .image-grid {
-    --gap: 16px;
-    --num-cols: 4;
-    --row-height: 300px;
-  
-    box-sizing: border-box;
-    padding: var(--gap);
-  
-    display: grid;
-    grid-template-columns: repeat(var(--num-cols), 1fr);
-    grid-auto-rows: var(--row-height);
-    gap: var(--gap);
-  }
-  
-  .image-grid > img {
+img{
+    max-width: 100%;
+}
+
+.gallery{
+    padding: 80px, 0;
+} 
+
+.gallery img{
+    background-color: #ffff;
+    padding: 15px;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .image-grid-col-2 {
-    grid-column: span 2;
-  }
-  
-  .image-grid-row-2 {
-    grid-row: span 2;
-  }
-  
-  /* Anything udner 1024px */
-  /* @media screen and (max-width: 1024px) {
-    .image-grid {
-      --num-cols: 2;
-      --row-height: 200px;
-    }
-  }
-    */
+    box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    cursor: pointer;
+}
