--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,30 @@
 body {
   margin: 0;
-  font-family: 'Cormorant Garamond', serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('../public/images/background.jpg'); filter:blur(.5px);
-  }
+}
 
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+   
+  /* body::before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+    background: url(../public/images/background.jpg);
+    background-size: cover;
+  } */
+/* 
 .row {
   padding: 40px;
  
@@ -26,7 +45,7 @@ code {
  
 }
 #about-me{
-  font-size: 25px;
+  font-size: 20px;
   font-family:'Cormorant Garamond', serif;
   color: black;
   font-weight: bold;
@@ -58,4 +77,4 @@ code {
 
 #pictures:hover .image{
   opacity: 0.3;
-}
+} */
