--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #060b26;
+    background-color:rgb(224, 216, 176);
     height: 80px;
     display: flex;
     justify-content: flex-start;
@@ -13,7 +13,7 @@
   }
   
   .nav-menu {
-    background-color: #060b26;
+    background-color: rgb(224, 216, 176);
     width: 250px;
     height: 100vh;
     display: flex;
@@ -40,7 +40,7 @@
   
   .nav-text a {
     text-decoration: none;
-    color: #f5f5f5;
+    color: rgb(206, 148, 97);
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -51,7 +51,7 @@
   }
   
   .nav-text a:hover {
-    background-color: #1a83ff;
+    background-color:rgb(252, 255, 231);
   }
   
   .nav-menu-items {
@@ -59,7 +59,7 @@
   }
   
   .navbar-toggle {
-    background-color: #060b26;
+    background-color:rgb(224, 216, 176);
     width: 100%;
     height: 80px;
     display: flex;
