--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Playfair Display',serif;
 }
    
   /* body::before {
