--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -10,6 +10,9 @@
    width: 70%;
    padding: 5px;
    margin: 10%;
+   border-radius: 80px;
+   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+
 }
 .homepage-text{
     font-family: 'Playfair Display', serif;
