--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+   
   }
   
   .menu-bars {
@@ -22,11 +23,13 @@
     top: 0;
     left: -100%;
     transition: 850ms;
+   
   }
   
   .nav-menu.active {
     left: 0;
     transition: 350ms;
+    position: sticky;
   }
   
   .nav-text {
@@ -75,6 +78,8 @@
     font-family: 'Homemade Apple', cursive;
    color: rgb(206, 148, 97);
    margin: 20px;
+   font-size: 25px;
+   position:relative;
  
    
 }
