added email validation usestate hook and updated projectlist github link

--- a/src/components/ProjectList/projectList.css
+++ b/src/components/ProjectList/projectList.css
@@ -14,3 +14,10 @@ img{
     box-shadow: 0 0 15px rgba(0,0,0,0.3);
     cursor: pointer;
 }
+.project-names{
+display: flex;
+justify-content: center;
+text-decoration: none;
+color: rgb(206, 148, 97); 
+font-weight: bold;
+}
