--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,9 @@
   margin: 0;
   padding: 0;
   font-family: 'Playfair Display',serif;
+  /* background-color:rgb(252, 255, 231) ; */
 }
+
 
 .home,
 .reports,
@@ -21,11 +23,11 @@
 }
 
 footer{
-  background-color:rgb(224, 216, 176);
-  position: absolute;
+  /* background-color:rgb(224, 216, 176); */
+  /* position: absolute;
   bottom: 0;
   width: 100%;
-  height: 4.5rem;  
+  height: 4.5rem;   */
   
 } 
 .footer-container{
@@ -44,26 +46,27 @@ a.social {
 a.social:hover {
   transform: translateY(-2px);
 } 
-.linkedin{
+.icon{
+  color: rgb(224, 216, 176);
   margin:10px;
 }
-.github{
-color: black;
+/* .github{
+color: rgb(224, 216, 176);
 margin: 10px;
 }
 .stack-overflow{
-  color: orange;
+  color: rgb(224, 216, 176);
   margin: 10px;
-} 
+}  */
 
 /* For mobile phones: */
-[class*="col-"] {
+/* [class*="col-"] {
   width: 100%;
-} 
+}  */
 
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) { */
   /* For tablets: */
-  .col-s-1 {width: 8.33%;}
+  /* .col-s-1 {width: 8.33%;}
   .col-s-2 {width: 16.66%;}
   .col-s-3 {width: 25%;}
   .col-s-4 {width: 33.33%;}
@@ -75,11 +78,11 @@ margin: 10px;
   .col-s-10 {width: 83.33%;}
   .col-s-11 {width: 91.66%;}
   .col-s-12 {width: 100%;}
-}
+} */
 
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) { */
   /* For desktop: */
-  .col-1 {width: 8.33%;}
+  /* .col-1 {width: 8.33%;}
   .col-2 {width: 16.66%;}
   .col-3 {width: 25%;}
   .col-4 {width: 33.33%;}
@@ -91,4 +94,10 @@ margin: 10px;
   .col-10 {width: 83.33%;}
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
-}
+} */
+@media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */ }
+@media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */ }
+@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
+@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+@media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+@media (min-width:1281px) { /* hi-res laptops and desktops */ }
