--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -8,7 +8,12 @@
 p {
     color: rgb(206, 148, 97);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 17px;
+}
+.focus{
+    color: rgb(206, 148, 97);
+    font-weight: bold;
+    font-size: 17px;
 }
 
 
@@ -20,8 +25,8 @@ p {
 #homepage {
     right: 0%;
     width: 70%;
-    padding: 5px;
-    margin: 10%;
+    padding: 10px;
+    margin: 25%;
     border-radius: 80px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
@@ -43,4 +48,18 @@ p {
 .welcome {
     text-align: center;
     font-family: 'Homemade Apple', cursive;
+} 
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    /* [class*="col-"] {
+      width: 100%;
+    } */
+
+.intro{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 100%;
 }
+ }
