--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,85 +1,175 @@
-.navbar {
-    background-color:rgb(224, 216, 176);
-    height: 80px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-   
-  }
-  
-  .menu-bars {
-    margin-left: 2rem;
-    font-size: 2rem;
-    background: none;
-  }
-  
-  .nav-menu {
-    background-color: rgb(224, 216, 176);
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
-   
-  }
-  
-  .nav-menu.active {
-    left: 0;
-    transition: 350ms;
-    position: sticky;
-  }
-  
-  .nav-text {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 8px 0px 8px 16px;
-    list-style: none;
-    height: 60px;
-  }
-  
-  .nav-text a {
-    text-decoration: none;
-    color: rgb(206, 148, 97);
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-  }
-  
-  .nav-text a:hover {
-    background-color:rgb(252, 255, 231);
-  }
-  
-  .nav-menu-items {
-    width: 100%;
-  }
-  
-  .navbar-toggle {
-    background-color:rgb(224, 216, 176);
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-  
-  span {
-    margin-left: 16px;
-  } 
-
- .name{
-    font-family: 'Homemade Apple', cursive;
-   color: rgb(206, 148, 97);
-   margin: 20px;
-   font-size: 25px;
-   position:relative;
- 
-   
+.NavbarItems {
+  background-color: rgb(224, 216, 176);
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.2rem;
+  padding: 0 30px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
+  width: 95%;
+  border-radius: 13px;
+  position: fixed;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%);
 }
+
+/* .menu-bars {
+  margin-left: 2rem;
+  font-size: 2rem;
+  background: none;
+} */
+
+.nav-menu {
+  background-color: rgb(224, 216, 176);
+  /* width: 250px;
+  height: 100vh; */
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  list-style: none;
+  align-items: center;
+  text-align: center;
+  justify-content: end;
+  /* position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms; */
+
+}
+
+.nav-links {
+  text-decoration: none;
+  color: rgb(206, 148, 97);
+  padding: 0.7rem 1rem;
+  white-space: nowrap;
+}
+
+.nav-links i {
+  padding-right: 10px;
+}
+
+.nav-links:hover {
+  background-color: rgb(243, 224, 181);
+  color: rgb(206, 148, 97);
+  border-radius: 4px;
+  transition: all 0.2s ease-in-out;
+}
+
+.fa-bars,
+.fa-times {
+  color: rgb(206, 148, 97);
+}
+
+.menu-icons {
+  display: none;
+}
+
+@media screen and (max-width: 850px) {
+  .NavbarItems {
+    z-index: 99;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: rgb(224, 216, 176);
+    /* box-shadow: 0 8px; */
+    backdrop-filter: blur(4px);
+    border-radius: 13px;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: -110%;
+    align-items: stretch;
+    padding: 80px 0 30px 0;
+    margin: 0;
+    z-index: -1;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .nav-menu.active {
+    left: 0%;
+  }
+
+  .nav-links {
+    display: block;
+    widows: 100%;
+    padding: 2rem 0;
+    color: rgb(206, 148, 97);
+
+  }
+
+  .nav-links:hover {
+    background-color: rgb(243, 224, 181);
+    backdrop-filter: blur(20px);
+  }
+
+  .menu-icons {
+    display: block;
+  }
+}
+
+/* 
+.nav-menu.active {
+  left: 0;
+  transition: 350ms;
+  position: sticky;
+}
+
+.nav-text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 8px 0px 8px 16px;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  text-decoration: none;
+  color: rgb(206, 148, 97);
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+
+.nav-text a:hover {
+  background-color: rgb(252, 255, 231);
+}
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: rgb(224, 216, 176);
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+span {
+  margin-left: 16px;
+} */
+
+.myname {
+  font-family: 'Homemade Apple', cursive;
+  color: rgb(206, 148, 97);
+  justify-self: start;
+  cursor: pointer;
+  margin: 20px;
+  font-size: 25px;
+
+  /* position: relative; */
+}
+
